chore: update links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import HeaderLink from "./HeaderLink.astro";
   >
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://github.com/flexdinesh/blogster"
+      href="https://github.com/jjaybrown"
     >
       <i
         class="fa-brands fa-github"
@@ -31,7 +31,7 @@ import HeaderLink from "./HeaderLink.astro";
     </a>
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://twitter.com/flexdinesh"
+      href="https://twitter.com/jjaybrown"
     >
       <i
         class="fa-brands fa-twitter"
