chore: update links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,18 +26,18 @@ import HeaderLink from "./HeaderLink.astro";
       <i
         class="fa-brands fa-github"
         aria-hidden="true"
-        title="Blogster on GitHub"></i>
-      <span class="fa-sr-only">Blogster on GitHub</span>
+        title="Jason on GitHub"></i>
+      <span class="fa-sr-only">Jason on GitHub</span>
     </a>
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://twitter.com/jjaybrown"
+      href="https://twitter.com/jjaybrown98"
     >
       <i
         class="fa-brands fa-twitter"
         aria-hidden="true"
-        title="Dinesh on Twitter"></i>
-      <span class="fa-sr-only">Dinesh on Twitter</span>
+        title="Jason on Twitter"></i>
+      <span class="fa-sr-only">Jason on Twitter</span>
     </a>
   </div>
 </header>
