--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,6 +1,9 @@
 ---
 import { readAll } from "../lib/markdoc/read";
 import { blog } from "../lib/markdoc/frontmatter.schema";
+import {
+  SITE_DESCRIPTION,
+} from "../config";
 
 const posts = await readAll({
   directory: "blog",
@@ -27,7 +30,7 @@ const sortedPosts = posts
         Jason Brown
       </span>
     </h1>
-    <p class="text-2xl pb-4">Engineering Leader, Aviator, Innovator.</p>
+    <p class="text-2xl pb-4">{SITE_DESCRIPTION}</p>
   </div>
   <div>
     <section slot="main">
