--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -29,11 +29,14 @@ import Footer from "../components/Footer.astro";
     <GoogleFont />
     <ThemeScript />
     <FontAwesome />
+    <script
+      defer
+      data-domain="jasonbrown.io"
+      src="https://plausible.io/js/script.js"
+    ></script>
   </head>
 
-  <body
-    class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8"
-  >
+  <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
     <Header />
     <main id="main">
       <slot name="main" />
